[package]
name = "lray_fish" # LRAyFish
version = "0.1.0"
authors = ["Abdirahman Ahmed Osman <abdirahman.osmanthus@gmail.com>"]
edition = "2018"

[lib]
name = "cartilage"
path = "src/lib.rs"

[[bin]]
name = "lray_fish" # LRAyFish
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
# cli arg parser
clap = { version = "3.2.16", features = ["derive"] }
geocoding = "0.4.0"
# ORM
diesel = { version = "1.4.8", features = ["postgres"] }
# dotfile handler
dotenv = "0.15.0"
dotenv_codegen = "0.15.0" 
